# measure-variations

./: 0.bootstrap.js  Cargo.toml  bootstrap.js  download-dataset.js  index.html  sequences.fasta
files/: 7BV2_P  LC522350  LC523807  LC523808  LC523809  LC529905  LC542976  LC546038  LC547519  LC547521  LC547522  LC547524  LC547526  LC547529  LC547530  LR757995  LR757996  LR757997  MN938384  MN938386  MN938388  MN938389  MN938390  MN970003  MN975262  MN975263  MN975266  MN975267  MN985325  MN988668  MN988713  MN996527  MN996531  MN997409  MT007544  MT008022  MT008023  MT012098  MT019529  MT019530  (+2183 more)
split_files/: Cargo.toml  sequences.fasta.REMOVED.git-id
split_files/files/: 7BV2_P  7BV2_T  LC522350  LC523809  LC528233  LC529905  LC534418  LC534419  LC542809  LC542976  LC546038  LC547518  LC547519  LC547521  LC547522  LC547523  LC547526  LC547527  LC547528  LC547529  LC547530  LC547532  LC547533  LR757996  LR757997  LR757998  MN938384  MN938387  MN970003  MN975262  MN975264  MN985325  MN988713  MN994468  MN996527  MN996529  MN996530  MN996531  MN997409  MT007544  (+3431 more)
split_files/src/: main.rs
src/: lib.rs  main.rs
www/: App.vue  bootstrap.js  index.js  package-lock.json  package.json  references.csv  webpack.config.js
www/files/: 7BV2_T  LC528232  LC528233  LC534418  LC534419  LC542809  LC547518  LC547520  LC547523  LC547525  LC547527  LC547528  LC547531  LC547532  LC547533  LR757998  MN908947  MN938385  MN938387  MN970004  MN975264  MN975265  MN975268  MN988669  MN994467  MN994468  MN996528  MN996529  MN996530  (+1611 more)
wwwa/: index.html  package-lock.json  package.json
