[package]
name = "measure-variations"
version = "0.1.0"
authors = ["diegocardoso93 <dieg0card0s0@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.30.0"
strsim = "0.10.0"
difference = "1.0"
term = "0.2.7"
